MINOR, ENHANCEMENT - initial setup and styling

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,9 +1,17 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
 	<head>
-		<title></title>
+		<title>This is the Party Line | Party Line.orgy</title>
+		<link rel="stylesheet" href="/stylesheets/style.css">
 	</head>
 	<body>
-		<%- body %>
+		<header id="Header">
+			<h1 class="Heading1">The Party Line Has Begun</h1>
+			<h2 class="Heading2">Come Join in!!!</h2>
+		</header>
+		<article id="Body">
+			<%- body %>
+		</article>
+		<footer id="Footer"><small>&copy;2011. <abbr titl="Carthy Allen Newton">CAN</abbr></small></footer>
 	</body>
 </html>
