--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,56 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+/* =Reset
+--------------------------------------------*/
+html, body, div, span, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, cite, code, del, dfn, img, ins, kbd, q, samp, strike, tt, var, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, header, nav, article, section, figure, aside, footer {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    font-weight: inherit;
+    font-style: inherit;
+    font-size: 100%;
+    font-family: inherit;
+    vertical-align: baseline;
 }
+:-moz-any-link:focus, input:focus, textarea:focus, a, a:active, a:focus { outline: none; }
+
+header, nav, article, section, figure, aside, footer { display: block; }
+
+html { background: url(/images/pattern.png) repeat scroll left top; padding: 40px; }
+	body { font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; font-size: medium; color: #fff; }
+	* html body { font-size: small; f\ont-size: medium; }
+
+a { cursor:pointer; color: #E2E7D7; }
+	a img { border:none; }
+button{ cursor: pointer; background-color: transparent; }
+
+p { margin: 20px 0; }
+table { border-collapse:collapse; }
+th { text-align: left; }
+ol { margin-left: 25px; }
+
+/* Float Container */
+.FLC { clear:both; }
+.FLC:after { content: "."; display: block; height: 0; clear: both; visibility: hidden; }
+
+/* =Typography
+--------------------------------------------*/
+.Heading1 { font-size: 36px; font-family: Georgia; font-style: italic; text-shadow: 0 1px 0 #000; }
+.Heading2 { font-size: 24px; font-family: Georgia; text-shadow: 0 1px 0 #000; text-decoration: underline; }
+.Heading3 { font-size: 18px; }
+.Note { font-size: 11px; color: #F7FDCF; text-shadow: 0 1px 0 #000000; }
+#Header { padding: 10px; }
+#Body { margin: 40px 0; }
+#Footer { padding: 10px; }
+
+.Conversation { width: 60%; margin-left: 0; list-style: none; }
+	.Conversation .Avatar { float: left; margin: 0 10px 10px 0; }
+	.Conversation .Message:first-child { border-top: none; }
+	.Conversation .Message { border-bottom: 1px solid #292936; border-top: 1px solid #2993bf; padding: 40px 10px 30px 0; }
+		.Conversation .Message .text, .Conversation .Message .time { margin: 0 0 10px 84px; }
+.Avatar { padding: 4px; box-shadow: 2px 2px 5px rgba(0,0,0,.8); border: 1px solid #E2E7D7; }
+	.Avatar .thumbnail { display: block; }
+	.Avatar .name { display: none; }
+
+.Chat { position: relative; width: 60%; border-top: 1px solid #2993bf; padding: 20px 0 0 ; }
+	.Chat .input { width: 97.3%; padding: 5px 10px; }
+	.Chat .submit { position: absolute; top: 26px; right: 10px; }
