initial work on sockets

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,8 @@
 	</li>
 </ol>
 
-<form action="" method="" class="Chat">
-	<input name="" value="" class="input">
+<form action="." method="GET" class="Chat">
+	<input type="hidden" name="user">
+	<input type="text" name="message" value="" class="input">
 	<input type="submit" name="" value="Send" class="submit" />
 </form>
