--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,6 +3,9 @@
 	<head>
 		<title>This is the Party Line | Party Line.orgy</title>
 		<link rel="stylesheet" href="/stylesheets/style.css">
+		<script src='https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js'></script>
+		<script src="socket.io/socket.io.js"></script>
+		<script src="scripts/chat.js"></script>
 	</head>
 	<body>
 		<header id="Header">
