show button on focus

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -18,6 +18,6 @@
 </ol>
 
 <form action="" method="" class="Chat">
-	<input name="" value="" class="input">
-	<input type="submit" name="" value="Send" class="submit" />
+	<input name="" id="messageBox" value="" class="input" onFocus="submitFade()">
+	<input type="submit" name="" value="Send" class="submit" id="submit" />
 </form>
