--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,6 +3,7 @@
 	<head>
 		<title>This is the Party Line | Party Line.orgy</title>
 		<link rel="stylesheet" href="/stylesheets/style.css">
+		<script type="text/javascript" src="/scripts/scripts.js"></script>
 	</head>
 	<body>
 		<header id="Header">
