jquery for submit button on focus

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,6 +19,20 @@
 
 <form action="." method="GET" class="Chat">
 	<input type="hidden" name="user">
-	<input type="text" name="message" value="" class="input" onFocus="submitFade()">
+	<input type="text" name="message" value="" class="input">
 	<input type="submit" name="" value="Send" class="submit" />
 </form>
+
+
+<script>
+
+$('.input').focus(function() {
+	$('.submit').fadeIn();
+});
+
+$('.input').focusout(function() {
+	$('.submit').fadeOut();
+});
+
+
+</script>
