--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,6 +6,7 @@
 		<script src='https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js'></script>
 		<script src="socket.io/socket.io.js"></script>
 		<script src="scripts/chat.js"></script>
+		<script src="/scripts/newton.js"></script>
 	</head>
 	<body>
 		<header id="Header">
