MAJOR, ENHANCEMENT - created the chat page, moved info from index over to chat, and created the route for new chat page

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>This is the Party Line | Party Line.orgy</title>
+		<title><%= title %> | Party Line.orgy</title>
 		<link rel="stylesheet" href="/stylesheets/style.css">
 		<script src='https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js'></script>
 		<script src="socket.io/socket.io.js"></script>
