--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,40 +1,1 @@
-<ol class="Conversation">
-	<!--
-	<li class="Message">
-		<a href="" class="Avatar">
-			<img src="http://dummyimage.com/64x64/000/fff.jpg" />
-			<span class="name">user 1</span>
-		</a>
-		<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		<p class="Note time">Posted <time datetime="">10 minutes ago</time></p>
-	</li>
-	<li class="Message">
-		<a href="" class="Avatar">
-			<img src="http://dummyimage.com/64x64/000/fff.jpg" />
-			<span class="name">user 1</span>
-		</a>
-		<p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		<p class="Note time">Posted <time datetime="">10 minutes ago</time></p>
-	</li>
-	-->
-</ol>
-
-<form action="." method="GET" class="Chat">
-	<input type="hidden" name="user">
-	<input type="text" name="message" value="" class="input">
-	<input type="submit" name="" value="Send" class="submit" />
-</form>
-
-
-<script>
-
-$('.input').focus(function() {
-	$('.submit').fadeIn();
-});
-
-$('.input').focusout(function() {
-	$('.submit').fadeOut();
-});
-
-
-</script>
+splash
