--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,8 +4,8 @@
 		<title><%= title %> | Party Line.orgy</title>
 		<link rel="stylesheet" href="/stylesheets/style.css">
 		<script src='https://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js'></script>
-		<script src="socket.io/socket.io.js"></script>
-		<script src="scripts/chat.js"></script>
+		<script src="/socket.io/socket.io.js"></script>
+		<script src="/scripts/chat.js"></script>
 	</head>
 	<body>
 		<header id="Header">
